--- a/hello/#style.css
+++ b/hello/#style.css
@@ -1,10 +1,60 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
+
+
+@font-face {
+
+font-family: 'Android';
+
+src: url('../fontes/idroid.otf') format('opentype');
+
+font-weight: normal;
+
+}
+
+:root {
+
+--core: #ebe5c5;
+
+--cor1: #83e1ad;
+
+--cor2: #3ddc84;
+
+--cor3: #2fa866;
+
+--cor4: #1a5c37;
+
+--cor5: #063d1e;
+
+--fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+
+--fonte-destaque: 'Bebas Neue', cursive;
+
+--fonte-android: 'Android', cursive;
+
+}
+
+I
 
 body {
 
+background-color: var(--core); 
+font-family: var(--fonte-padrao);
 
-background-color:
+}
 
-#c5ebd6;
 
- }
+header {
+
+background-color: var(--cor4);
+
+}
+
+header> h1{
+
+    color:white;
+    font-family: var(--fonte-destaque);
+}
+header>p{
+    color:white
+}
