--- a/hello/estilos/style.css
+++ b/hello/estilos/style.css
@@ -1,64 +1,64 @@
 @charset "UTF-8";
 
-Paleta de cores
+/**Paleta de cores
 
 Verde: #49a09d
 
-Lilás: #5f2c82
-{       
-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; margin: 0px; box-sizing: border-box;
-
-padding: 8px;
-margin: 0px; box-sizing: 
-border-box;
-   }
-
-body, html {   
-background-color: #5f2c82; height: 100vh;
- height: 100vh;
-width: 100vw;
-
-   }
-main {
-position: relative;
-height: 100vh; 
-width: 100v
+Lilás: #5f2c82*/
+* {
+   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   padding: 8px;
+   margin: 0px;
+   box-sizing: border-box;
 }
 
-section#login {   
-position: absolut;
-top: 50%;
-left:50%;
-tranform: translate (-50%,-50%);
-overflow:hidden;
+body,
+html {
+   background-color: #5f2c82;
+   height: 100vh;
+   height: 100vh;
+   width: 100vw;
+}
 
-box-shadow: 0px 0px 10px rgba( 0,0,0, 0.450);
+main {
+   position: relative;
+   height: 100vh;
+   width: 100v
+}
 
-transition: midht .3s, height .3s;         ;
-transition-timing-funcion: ease;
+section#login {
+   position: absolut;
+   top: 50%;
+   left: 50%;
+   transform: translate (-50%, -50%);
+   overflow: hidden;
 
-background-color:
-width: 250px;
-height: 500px;
-border-radius:20xp;
-   }
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
-   section login > div#imagem {
+   transition: midht .3s, height .3s;
+   transition-timing-function: ease;
+   background-color: #49a09d;
+   width: 250px;
+   height: 500px;
+   border-radius: 20xp;
+}
 
-      display: block;
-      
-      background: #5f2c82 url(../imagens/metal.jpg) no-repeat; background-position: left bottom;
-      
-      background-size: cover;
-      
-      height: 200px;
-      
-      }
-      
-      section#login > dive formulario{     
-      
-      display: block;
-      
-      padding: 10px;
-   }
-   
+section login>div#imagem {
+
+   display: block;
+
+   background: #5f2c82 url(../imagens/metal.jpg) no-repeat;
+   background-position: left bottom;
+
+   background-size: cover;
+
+   height: 200px;
+
+}
+
+section#login>div, form {
+
+   display: block;
+
+   padding: 10px;
+}
