--- a/hello/estilos/style.css
+++ b/hello/estilos/style.css
@@ -47,7 +47,7 @@ section#login > div#imagem {
 
    display: block;
 
-   background: #5f2c82 url("../hello/imagens/metal.jpg") no-repeat;
+   background: #5f2c82 url("../imagens/metal.jpg") no-repeat;
    background-position: left bottom;
 
    background-size: cover;
