--- a/referencia/mod04/26__tela_login/estilos/styles.css
+++ b/referencia/mod04/26__tela_login/estilos/styles.css
@@ -5,3 +5,99 @@
   Verde: #49a09d
   Roxo: #5f2c82
 */
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+body, html {
+  background-color: #5f2c82;
+  height: 100vh;
+  width: 100vw;
+}
+
+main {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+}
+
+section#login {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+
+  background-color: #fff;
+  width: 250px;
+  height: 500px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.450);
+
+  transition: width .3s, height .3s;
+  transition-timing-function: ease;
+}
+
+section#login>div#imagem {
+  display: block;
+  background: #5f2c82 url(../imagens/metal.jpg) no-repeat;
+  background-size: cover;
+  background-position: left bottom;
+  height: 200px;
+}
+
+section#login>div#formulario {
+  display: block;
+  padding: 10px;
+}
+
+div#formulario>h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+div#formulario>p {
+  font-size: 0.8em;
+}
+
+form>input[type=submit] {
+  display: block;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  background-color: #49a09d;
+  color: #fff;
+
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form>input[type=submit]:hover {
+  background-color: #2d6462;
+}
+
+form>a.botao {
+  display: block;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  padding-top: 5px;
+  margin-top: 5px;
+  background-color: #fff;
+  border: 1px solid #49a09d;
+  color: #2d6462;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form>a.botao:hover {
+  background-color: #6cd3cf;
+}
+
+form>a.botao>i {
+  font-size: 0.8em;
+}
