--- a/referencia/mod04/26__tela_login/estilos/styles.css
+++ b/referencia/mod04/26__tela_login/estilos/styles.css
@@ -28,15 +28,15 @@ section#login {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   overflow: hidden;
 
   background-color: #fff;
   width: 250px;
-  height: 500px;
+  height: 520px;
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.450);
 
+  transform: translate(-50%, -50%);
   transition: width .3s, height .3s;
   transition-timing-function: ease;
 }
@@ -61,6 +61,43 @@ div#formulario>h1 {
 
 div#formulario>p {
   font-size: 0.8em;
+}
+
+form>div.campo {
+  background-color: #5f2c82;
+  border: 2px solid #5f2c82;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
+  margin: 5px 0px;
+}
+
+div.campo>label {
+  display: none;
+}
+
+div.campo>i {
+  color: #fff;
+  /* background-color: #000; */
+  font-size: 2em;
+  width: 40px;
+  padding: 5px;
+}
+
+div.campo>input {
+  background-color: #94cfcd;
+  font-size: 1em;
+  height: 100%;
+  width: calc(100% - 44px);
+  border: 0;
+  border-radius: 8px;
+  padding: 4px;
+  transform: translateY(-12px);
+}
+
+div.campo>input:focus-within {
+  background-color: #fff;
 }
 
 form>input[type=submit] {
